# llfcchat

./: README.md  项目架构分析.md
GateServer/: .gitignore  CMakeLists.txt  CServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  test.cpp
GateServer/src/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  Singleton.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h  message.grpc.pb.h  test.cpp  test_hiredis.cpp
VarifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  server.js
violetchat/: clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  singleton.h  timerbtn.cpp  timerbtn.h  violetchat.pro
violetchat/style/: stylesheet.qss
